--- a/advanced/84-coffe-wifi-project/templates/index.html
+++ b/advanced/84-coffe-wifi-project/templates/index.html
@@ -3,13 +3,21 @@
 
 {% block content %}
 <div class="jumbotron text-center">
-    <div class="container">
-  <h1 class="display-4"> Coffee & Wifi</h1>
-  <p class="lead">Do you wanna work in my coffee shop and need wifi too?</p>
-  <hr class="my-4">
-  <p>This is the best place for you! We have coffee and wifi!</p>
-  <a class="btn brn-warning brn-lg" href="#" role="button">Show Me!</a>
+  <div class="container">
+    <h1 class="display-4">☕️ Coffee & Wifi 💻</h1>
+    <p class="lead">Want to work in a cafe but need power and wifi?</p>
+    <hr class="my-4" />
+    <p>
+      You've found the right place! Checkout my collection of cafes with data on
+      power socket availability, wifi speed and coffee quality.
+    </p>
+    <a
+      class="btn btn-warning btn-lg"
+      href="{{ url_for('cafes') }}"
+      role="button"
+      >Show Me!</a
+    >
+  </div>
 </div>
-    </div>
 
 {% endblock %}
