--- a/advanced/90-blog-part-IV/templates/post.html
+++ b/advanced/90-blog-part-IV/templates/post.html
@@ -1,3 +1,4 @@
+{% from "bootstrap5/form.html" import render_form %}
 {% include "header.html" %}
 
 <!-- Page Header-->
@@ -10,7 +11,8 @@
           <h2 class="subheading">{{ post.subtitle }}</h2>
           <span class="meta"
             >Posted by
-            <a href="#">{{ post.author }}</a>
+            <!-- Changed from post.author -->
+            <a href="#">{{ post.author.name }}</a>
             on {{ post.date }}
           </span>
         </div>
@@ -36,21 +38,31 @@
         </div>
         {% endif %}
 
-        <!--           Comments Area -->
-        <div class="col-lg-8 col-md-10 mx-auto comment">
+        <!-- Comments Area -->
+        <!-- Load the CKEditor -->
+        {{ ckeditor.load() }}
+        <!-- Configure it with the name of the form field from CommentForm -->
+        {{ ckeditor.config(name='comment_text') }}
+        <!-- Create the wtf quick form from CommentForm -->
+        {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+        <div class="comment">
           <ul class="commentList">
+            <!-- Show all comments -->
+            {% for comment in post.comments: %}
             <li>
               <div class="commenterImage">
                 <img
-                  src="../static/assets/img/default-profile.jpg"
+                  src="{{ comment.comment_author.email | gravatar }}"
                 />
               </div>
               <div class="commentText">
-                <p>Some comment</p>
-                <span class="date sub-text">comment author name</span>
+                {{comment.text|safe}}
+                <span class="sub-text">{{comment.comment_author.name}}</span>
               </div>
             </li>
+            {% endfor %}
           </ul>
+
         </div>
       </div>
     </div>
