--- a/advanced/90-blog-part-IV/templates/register.html
+++ b/advanced/90-blog-part-IV/templates/register.html
@@ -1,6 +1,5 @@
-{% from "bootstrap5/form.html" import render_form %}
-{% block content %}
-{% include "header.html" %}
+{% from "bootstrap5/form.html" import render_form %} {% block content %} {%
+include "header.html" %}
 
 <!-- Page Header -->
 <header
