--- a/advanced/90-blog-part-IV/templates/header.html
+++ b/advanced/90-blog-part-IV/templates/header.html
@@ -8,20 +8,29 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Angela's Blog</title>
+    <title>Luci's Blog</title>
+
     {% block styles %}
-    <!-- Load Bootstrap-Flask CSS here -->
-    {{ bootstrap.load_css() }}
+    <!-- Bootstrap 5 CSS (înlocuiește bootstrap.load_css()) -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    >
+
     <link
       rel="icon"
       type="image/x-icon"
       href="{{ url_for('static', filename='assets/favicon.ico') }}"
     />
+
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
     ></script>
+
     <!-- Google fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
@@ -33,6 +42,7 @@
       rel="stylesheet"
       type="text/css"
     />
+
     <!-- Core theme CSS (includes Bootstrap)-->
     <link
       href="{{ url_for('static', filename='css/styles.css') }}"
@@ -40,6 +50,7 @@
     />
     {% endblock %}
   </head>
+
   <body>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
@@ -66,6 +77,7 @@
                 >Home</a
               >
             </li>
+
             <!-- Only show Login/Register if user is logged out. Otherwise show "Log Out" -->
             {% if not current_user.is_authenticated: %}
             <li class="nav-item">
@@ -91,6 +103,7 @@
               >
             </li>
             {% endif %}
+
             <li class="nav-item">
               <a
                 class="nav-link px-lg-3 py-3 py-lg-4"
@@ -109,5 +122,32 @@
         </div>
       </div>
     </nav>
+
+    <!-- Main content block -->
+    <div class="container">
+      {% block content %}{% endblock %}
+    </div>
+
+    <!-- Footer -->
+    <footer class="border-top">
+      <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+          <div class="col-md-10 col-lg-8 col-xl-7">
+            <div class="small text-center text-muted fst-italic">
+              Copyright &copy; Your Website 2026
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Bootstrap 5 JS Bundle (înlocuiește bootstrap.load_js()) -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous">
+    </script>
+
+    {% block scripts %}{% endblock %}
   </body>
 </html>
