--- a/advanced/91-blog-for-deployment/templates/header.html
+++ b/advanced/91-blog-for-deployment/templates/header.html
@@ -8,10 +8,11 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Angela's Blog</title>
+    <title>Luci's Blog</title>
     {% block styles %}
-    <!-- Load Bootstrap-Flask CSS here -->
-    {{ bootstrap.load_css() }}
+    <!-- Bootstrap 5 CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link
       rel="icon"
       type="image/x-icon"
@@ -109,5 +110,8 @@
         </div>
       </div>
     </nav>
+
+    <!-- Bootstrap 5 JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
